# BankSystem-Cpp

./: .gitignore  Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  MainTrain.cpp  Person.cpp  Person.h  README.md  Transaction.cpp  Transaction.h
